--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,14 @@
-# LLM API Configuration (for Verifier)
+# Server
+PORT=3001
+NODE_ENV=development
+NODE_TLS_REJECT_UNAUTHORIZED=0
+
+# LLM
 LLM_API_URL=http://localhost:8000/v1/chat/completions
 LLM_MODEL=/data/models/your-model
 
-# Redis Configuration
+# Redis
 REDIS_URL=redis://localhost:6379
 
-# Server Configuration
-PORT=3001
-NODE_ENV=development
-
-# CORS Configuration (comma-separated for multiple origins)
+# CORS
 ALLOWED_ORIGINS=http://localhost:3000
