--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.21",
-    "next": "^16.0.0",
+    "next": "16.0.10",
     "openai": "^6.6.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
