--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-# Backend server URL
-NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
+# Server Configuration
+PORT=3001
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
 
 # LLM API URL (vLLM chat completions endpoint)
-# NOTE: This is now used by the backend server, not the frontend
 LLM_API_URL=http://your-llm-server:8000/v1/chat/completions
 
 # LLM Model path
 # Example: /data/models/gpt-oss-120b
 LLM_MODEL=/path/to/your/model
+
+# SSL Configuration (set to 0 for development)
+NODE_TLS_REJECT_UNAUTHORIZED=0
