--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
 # Dependencies
 node_modules/
-backend/node_modules/
 
 # Environment variables
 .env
-.env.local
-.env.*.local
-backend/.env
+.env.*
+!.env.example
 
 # Build outputs
 dist/
-backend/dist/
-.next/
-out/
 
 # Logs
 *.log
