--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "a2a-orchestrator",
-  "version": "1.0.0",
-  "description": "A2A multi-agent orchestrator with Next.js frontend",
-  "main": "index.js",
+  "name": "a2a-orchestrator-backend",
+  "version": "1.0.2",
+  "description": "Backend server for A2A Orchestrator",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "lint": "eslint src --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@tailwindcss/postcss": "^4.1.15",
+    "@a2a-js/sdk": "^0.3.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "redis": "^4.7.0",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^24.9.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "autoprefixer": "^10.4.21",
-    "next": "16.0.10",
-    "openai": "^6.6.0",
-    "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.15",
+    "@types/uuid": "^10.0.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
 }
