--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Server Configuration
+NODE_ENV=development
 PORT=3001
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://127.0.0.1:6379
 
 # LLM API URL (vLLM chat completions endpoint)
 LLM_API_URL=http://your-llm-server:8000/v1/chat/completions
@@ -12,4 +13,6 @@ LLM_API_URL=http://your-llm-server:8000/v1/chat/completions
 LLM_MODEL=/path/to/your/model
 
 # SSL Configuration (set to 0 for development)
-NODE_TLS_REJECT_UNAUTHORIZED=0
+# NODE_TLS_REJECT_UNAUTHORIZED=0
+
+ALLOWED_ORIGINS=http://localhost:3000
