--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "openai": "^6.16.0",
     "redis": "^4.7.0",
+    "umap-js": "^1.4.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
